--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Navbar-section-starts -->
  <div class="container">
   <nav>
-    <label class="logo"><img src="img/Mask Group.png" alt=""></label>
+    <label class="logo"><img src="Mask Group.png" alt=""></label>
     <ul>
       <li><a href="#" class="active">Home</a></li>
       <li><a href="#">For drivers</a></li>
