--- a/index.html
+++ b/index.html
@@ -58,23 +58,23 @@
  <div class="forDriver-section">
 
   <div class="images">
-    <img src="img/Vector 4.png" alt="" class="randImg" >
-    <img src="img/Vector 4.png" alt="" class="randImg2">
-    <img src="img/Vector 4.png" alt="" class="randImg3">
-    <img src="img/Vector 4.png" alt="" class="randImg4">
+    <img src="Vector 4.png" alt="" class="randImg" >
+    <img src="Vector 4.png" alt="" class="randImg2">
+    <img src="Vector 4.png" alt="" class="randImg3">
+    <img src="Vector 4.png" alt="" class="randImg4">
    </div>
 
 
   <div class="columns">
-    <div class="column is-6" id="bottom" data-aos="fade-right"><img src="img/Frame.png" alt="" id="Min"></div>
+    <div class="column is-6" id="bottom" data-aos="fade-right"><img src="Frame.png" alt="" id="Min"></div>
     <div class="column is-6" id="mt" data-aos="fade-left"><div class="section">
       <p class="title is-3 has-text-warning" id="position">At Fastplus Cargo We Care, We Deliver, We Respect!</p><br>
     <p class="mt-6">We have programs for company drivers, lease <br>
       drivers and owner operators</p><br><br><br><div class="swiper mySwiper1">
         <div class="swiper-wrapper"data-aos="fade-left">
-          <div class="swiper-slide"><div class="slide1"> <img src="img/Group@2x.png" alt="" class="pos"><br> <p class="has-text-white" id="text"><h3 class="title is-1 has-text-warning" id="text">We hire experienced truckers</h3><p id="text2" class="has-text-white">Our team includes owner-operators and company drivers.</p></p></div></div>
-          <div class="swiper-slide"><div class="slide1"> <img src="img/Frame@2x.png" alt="" class="pos2"><br><p class="has-text-white" id="text"><h3 class="title is-1 has-text-warning" id="text">We hire experienced truckers</h3><p id="text2" class="has-text-white">Our team includes owner-operators and company drivers.</p></p></div></div>
-          <div class="swiper-slide"><div class="slide1"> <img src="img/Group@2x.png" alt="" class="pos"><br><p class="has-text-white" id="text"><h3 class="title is-1 has-text-warning" id="text">We hire experienced truckers</h3><p id="text2" class="has-text-white">Our team includes owner-operators and company drivers.</p></p></div></div>
+          <div class="swiper-slide"><div class="slide1"> <img src="Group@2x.png" alt="" class="pos"><br> <p class="has-text-white" id="text"><h3 class="title is-1 has-text-warning" id="text">We hire experienced truckers</h3><p id="text2" class="has-text-white">Our team includes owner-operators and company drivers.</p></p></div></div>
+          <div class="swiper-slide"><div class="slide1"> <img src="Frame@2x.png" alt="" class="pos2"><br><p class="has-text-white" id="text"><h3 class="title is-1 has-text-warning" id="text">We hire experienced truckers</h3><p id="text2" class="has-text-white">Our team includes owner-operators and company drivers.</p></p></div></div>
+          <div class="swiper-slide"><div class="slide1"> <img src="Group@2x.png" alt="" class="pos"><br><p class="has-text-white" id="text"><h3 class="title is-1 has-text-warning" id="text">We hire experienced truckers</h3><p id="text2" class="has-text-white">Our team includes owner-operators and company drivers.</p></p></div></div>
         </div>
         <div class="swiper-pagination"></div>
       </div>
@@ -92,12 +92,12 @@
 
    
   </div>
-  <div class="column"data-aos="fade-left"><div class="white"><img src="img/mack.png" alt=""></div></div>
+  <div class="column"data-aos="fade-left"><div class="white"><img src="mack.png" alt=""></div></div>
 </div>
 
 
 <div class="columns">
-  <div class="column" data-aos="fade-up-right"><div class="white2"><img src="img/team.png" alt=""></div></div>
+  <div class="column" data-aos="fade-up-right"><div class="white2"><img src="team.png" alt=""></div></div>
   <div class="column" data-aos="fade-up-left">
     <div class="section">
       <p class="title is-3 has-text-warning pb-6 pl-6" id="position2">OUR TEAM OF <br>EXPERIENCED TRUCK<br>  DRIVERS</p>
@@ -147,21 +147,21 @@
     <div class="section">
       <div class="swiper mySwiper"data-aos="zoom-in-down">
         <div class="swiper-wrapper">
-          <div class="swiper-slide" id="center"><img src="img/2C-logo---Ryder-EB---Web.png" alt=""></div>
-          <div class="swiper-slide" id="center"><img src="img/Amazon logo.png" alt=""></div>
-          <div class="swiper-slide"id="center"><img src="img/XPO-Logo-1920x1280-4.png" alt=""></div>
-          <div class="swiper-slide"id="center"><img src="img/af63c19c198e3c17063c4380d988e188.png" alt=""></div>
-          <div class="swiper-slide"id="center"><img src="img/Untitled-1.png" alt=""></div>
+          <div class="swiper-slide" id="center"><img src="2C-logo---Ryder-EB---Web.png" alt=""></div>
+          <div class="swiper-slide" id="center"><img src="Amazon logo.png" alt=""></div>
+          <div class="swiper-slide"id="center"><img src="XPO-Logo-1920x1280-4.png" alt=""></div>
+          <div class="swiper-slide"id="center"><img src="af63c19c198e3c17063c4380d988e188.png" alt=""></div>
+          <div class="swiper-slide"id="center"><img src="Untitled-1.png" alt=""></div>
         </div>
         <div class="swiper-pagination"></div>
       </div>
       <div class="swiper mySwiper"data-aos="zoom-in-down">
         <div class="swiper-wrapper">
-          <div class="swiper-slide" id="center"><img src="img/2C-logo---Ryder-EB---Web.png" alt=""></div>
-          <div class="swiper-slide" id="center"><img src="img/Amazon logo.png" alt=""></div>
-          <div class="swiper-slide"id="center"><img src="img/XPO-Logo-1920x1280-4.png" alt=""></div>
-          <div class="swiper-slide"id="center"><img src="img/Amazon logo.png" alt=""></div>
-          <div class="swiper-slide"id="center"><img src="img/Untitled-1.png" alt=""></div>
+          <div class="swiper-slide" id="center"><img src="2C-logo---Ryder-EB---Web.png" alt=""></div>
+          <div class="swiper-slide" id="center"><img src="Amazon logo.png" alt=""></div>
+          <div class="swiper-slide"id="center"><img src="XPO-Logo-1920x1280-4.png" alt=""></div>
+          <div class="swiper-slide"id="center"><img src="Amazon logo.png" alt=""></div>
+          <div class="swiper-slide"id="center"><img src="Untitled-1.png" alt=""></div>
         </div>
         <div class="swiper-pagination"></div>
       </div>
@@ -174,7 +174,7 @@
 <div class="about-us section">
   <p class="has-text-warning" id="lb">About us</p><br>
   <div class="columns">
-    <div class="column"data-aos="zoom-in-right"><img src="img/Group 9971.png" alt=""></div>
+    <div class="column"data-aos="zoom-in-right"><img src="Group 9971.png" alt=""></div>
     <div class="column"data-aos="zoom-in-left"><p class="">Fastplus Cargo is proud to be one of the fastest growing <br>
         logistics company to serve across the United States.<br>
          Thanks to our
@@ -186,14 +186,14 @@
   </div>
   <div class="columns">
     <div class="column"></div>
-    <div class="column"data-aos="zoom-in-right"><img src="img/Group 9972.png" alt=""></div>
+    <div class="column"data-aos="zoom-in-right"><img src="Group 9972.png" alt=""></div>
     <div class="column"data-aos="zoom-in-left"><p>Fastplus Cargo is proud to be one of the fastest growing logistics company to serve across the United States. Thanks to our
       great team and partners we are hitting the every milestone on our way. We operate all 48 states with fleet of the latestgeneration trucks.
       </p></div>
   </div>
 
   <div class="columns">
-    <div class="column"data-aos="zoom-out-right"><img src="img/Group 9973.png" alt=""></div>
+    <div class="column"data-aos="zoom-out-right"><img src="Group 9973.png" alt=""></div>
     <div class="column"data-aos="zoom-out-left"><p>Fastplus Cargo is proud to be one of the fastest growing logistics company to serve across the United States. Thanks to our
       great team and partners we are hitting the every milestone on our way. We operate all 48 states with fleet of the latestgeneration trucks.
       </p></div>
@@ -218,10 +218,10 @@
 
   <div class="swiper mySwiper mt-5" data-aos="flip-right">
     <div class="swiper-wrapper"data-aos="zoom-out">
-      <div class="swiper-slide"><div class="slide1"> <img src="img/Ellipse (1).png" alt="" class="pos3"><br> <p class="has-text-white" id="text"><h3 class="title is-1 has-text-white" id="text"><p class="title is-5 has-text-warning">Niky Leanardo</p> <br>We hire experienced truckers</h3><p id="text2" class="has-text-white"><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i></p></p></div></div>
-      <div class="swiper-slide"><div class="slide1"> <img src="img/Ellipse (2).png" alt="" class="pos3"><br> <p class="has-text-white" id="text"><h3 class="title is-1 has-text-white" id="text"><p class="title is-5 has-text-warning">Niky Leanardo</p> <br>We hire experienced truckers</h3><p id="text2" class="has-text-white"><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i></p></p></div></div>
-      <div class="swiper-slide"><div class="slide1"> <img src="img/Ellipse (3).png" alt="" class="pos3"><br> <p class="has-text-white" id="text"><h3 class="title is-1 has-text-white" id="text"><p class="title is-5 has-text-warning">Niky Leanardo</p> <br>We hire experienced truckers</h3><p id="text2" class="has-text-white"><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i></p></p></div></div>
-      <div class="swiper-slide"><div class="slide1"> <img src="img/Ellipse (4).png" alt="" class="pos3"><br> <p class="has-text-white" id="text"><h3 class="title is-1 has-text-white" id="text"><p class="title is-5 has-text-warning">Niky Leanardo</p> <br>We hire experienced truckers</h3><p id="text2" class="has-text-white"><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i></p></p></div></div>
+      <div class="swiper-slide"><div class="slide1"> <img src="Ellipse (1).png" alt="" class="pos3"><br> <p class="has-text-white" id="text"><h3 class="title is-1 has-text-white" id="text"><p class="title is-5 has-text-warning">Niky Leanardo</p> <br>We hire experienced truckers</h3><p id="text2" class="has-text-white"><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i></p></p></div></div>
+      <div class="swiper-slide"><div class="slide1"> <img src="Ellipse (2).png" alt="" class="pos3"><br> <p class="has-text-white" id="text"><h3 class="title is-1 has-text-white" id="text"><p class="title is-5 has-text-warning">Niky Leanardo</p> <br>We hire experienced truckers</h3><p id="text2" class="has-text-white"><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i></p></p></div></div>
+      <div class="swiper-slide"><div class="slide1"> <img src="Ellipse (3).png" alt="" class="pos3"><br> <p class="has-text-white" id="text"><h3 class="title is-1 has-text-white" id="text"><p class="title is-5 has-text-warning">Niky Leanardo</p> <br>We hire experienced truckers</h3><p id="text2" class="has-text-white"><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i></p></p></div></div>
+      <div class="swiper-slide"><div class="slide1"> <img src="Ellipse (4).png" alt="" class="pos3"><br> <p class="has-text-white" id="text"><h3 class="title is-1 has-text-white" id="text"><p class="title is-5 has-text-warning">Niky Leanardo</p> <br>We hire experienced truckers</h3><p id="text2" class="has-text-white"><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i><i class="fas fa-star has-text-warning"></i></p></p></div></div>
     </div>
     <div class="swiper-pagination"></div>
   </div>
@@ -294,7 +294,7 @@
         Sunday:	DAYOFF</p>
         </div>
     <div class="column">
-     <img src="img/1280px-Total_Quality_Logistics_logo.png" alt=""><br>
+     <img src="1280px-Total_Quality_Logistics_logo.png" alt=""><br>
       <p><i class="fas fa-location"></i> Address: 4100 Horizons Drive, Suite 211, Columbus, Ohio 43220</p>
     </div>
   </div>
